--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,9 @@
 services:
+  # A Docker web service
   - type: web
-    name: api-service
-    runtime: docker
-    memory: 512MB 
-    env: python
-    buildCommand: docker build -t {{.Service.Slug}} .
-    startCommand: >
-      gunicorn src.app:app 
-      --bind 0.0.0.0:$PORT 
-      --workers $WEB_CONCURRENCY 
-      --worker-class uvicorn.workers.UvicornWorker
-    envVars:
-      - key: WEB_CONCURRENCY
-        value: 1  # Start with 1 worker, increase if memory allows
+    name: fastapi-example
+    runtime: python
+    plan: free
+    autoDeploy: false
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn src.app:app --host 0.0.0.0 --port $PORT
